--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-navigation-menu": "^1.1.4",
         "@radix-ui/react-slot": "^1.0.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "framer-motion": "^11.0.6",
         "i18next": "^23.9.0",
         "i18next-browser-languagedetector": "^7.2.0",
         "lucide-react": "^0.334.0",
@@ -21,7 +24,8 @@
         "react-i18next": "^14.0.5",
         "react-router-dom": "^6.22.1",
         "tailwind-merge": "^2.2.1",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zustand": "^4.5.2"
     },
     "devDependencies": {
         "@stylistic/eslint-plugin-js": "^1.6.2",
