--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
         "framer-motion": "^11.0.6",
         "i18next": "^23.9.0",
         "i18next-browser-languagedetector": "^7.2.0",
-        "lucide-react": "^0.334.0",
+        "lucide-react": "^0.372.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^14.0.5",
         "react-router-dom": "^6.22.1",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.0",
         "zustand": "^4.5.2"
     },
     "devDependencies": {
