--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-dom": "^18.2.0",
         "react-i18next": "^14.0.5",
         "react-router-dom": "^6.22.1",
+        "react-router-hash-link": "^2.4.3",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.0",
@@ -34,6 +35,7 @@
         "@types/node": "^20.11.19",
         "@types/react": "^18.2.55",
         "@types/react-dom": "^18.2.19",
+        "@types/react-router-hash-link": "^2.4.9",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
         "@vitejs/plugin-react": "^4.2.1",
